feat: Favorite CRUD API 추가 및 Swagger 추가